--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
   "background_color": "#e7f0ff",
   "theme_color": "#3B82F6",
   "icons": [
+    { "src": "icon/icon_192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon/icon_512.png", "sizes": "512x512", "type": "image/png" }
+  ]
+    
     {
       "src": "yonde_icon_192.png",
       "sizes": "192x192",
