--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   ]
     
     {
-      "src": "yonde_icon_192.png",
+      "src": "icon_192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "yonde_icon_512.png",
+      "src": "icon_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
