--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
+  "orientation": "landscape",
   "background_color": "#e7f0ff",
   "theme_color": "#3B82F6",
   "icons": [
